# FibonacciProject

./: CMakeLists.txt
include/: fibonacci.h
src/: main.cpp
tests/: test_fibonacci.cpp
